cmake_minimum_required(VERSION 2.8.10)
project(ffmpeg)
include(flags OPTIONAL)
if(${CMAKE_SYSTEM_NAME} STREQUAL "Windows")
  file(GLOB lib ${CMAKE_CURRENT_SOURCE_DIR}/bin/*.lib)
  file(GLOB dll ${CMAKE_CURRENT_SOURCE_DIR}/bin/*.dll)
  install(FILES ${lib} DESTINATION lib${NUMBITS})
  install(PROGRAMS ${dll} DESTINATION bin${NUMBITS})
endif()
install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/include/* DESTINATION include/${PROJECT_NAME})
