cmake_minimum_required(VERSION 3.0)
project(ffmpeg)
include(flags OPTIONAL)
if(DEFINED FFMPEG_VER)
  set(ver _${FFMPEG_VER})
  set(verDir /${PROJECT_NAME}${ver})
endif()
if(${CMAKE_SYSTEM_NAME} STREQUAL "Windows")
  file(GLOB libs ${CMAKE_CURRENT_SOURCE_DIR}/bin/*.lib)
  file(GLOB dlls ${CMAKE_CURRENT_SOURCE_DIR}/bin/*.dll)
  foreach(lib ${libs})
    get_filename_component(ext ${lib} EXT)
    get_filename_component(nam ${lib} NAME_WE)
    install(FILES ${lib} DESTINATION lib RENAME ${nam}${ver}${ext})
  endforeach()
  install(PROGRAMS ${dlls} DESTINATION bin)
endif()
install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/include/ DESTINATION include${verDir}/${PROJECT_NAME})
